--- a/content/404.md
+++ b/content/404.md
@@ -1,6 +1,7 @@
 ---
 title: 404 Page not found
 layouts: 404
+ogImage: "https://www.aligner.io/images/aligner-logo.png"
 include_footer: true
 ---
 
