Add language and description

--- a/content/404.md
+++ b/content/404.md
@@ -2,6 +2,7 @@
 title: 404 Page not found
 layouts: 404
 ogImage: "https://www.aligner.io/images/aligner-logo.png"
+description: "Aligner - 404 Page not found"
 include_footer: true
 ---
 
