--- a/content/estonian/404.md
+++ b/content/estonian/404.md
@@ -1,8 +1,8 @@
 ---
-title: 404 Page not found
+title: 404 Sellist lehte ei ole
 layouts: 404
 ogImage: "https://www.aligner.io/images/aligner-logo.jpeg"
-description: "Aligner - 404 Page not found"
+description: "Aligner - 404 lehte ei leitud"
 include_footer: true
 ---
 
